objects/AsiaProjectMasterDetail__c.object
<CustomObject>
    <fields>
        <fullName>AccompanyingPaperOutput__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accompanying Paper Output</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Body__c</fullName>
        <label>Body</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CatalogCurrency__c</fullName>
        <label>Catalog Currency</label>
        <picklist>
            <picklistValues>
                <fullName>USD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SGD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JPY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GBP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EUR</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CostPriceJProdUnit__c</fullName>
        <label>Cost Price (JProd unit)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CostPriceUnit__c</fullName>
        <label>Cost Price Unit</label>
        <picklist>
            <picklistValues>
                <fullName>USD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SGD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JPY</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CostPrice__c</fullName>
        <label>Cost Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Depth__c</fullName>
        <label>Depth</label>
        <precision>1</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsOverheadTarget__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Overhead Target</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsShowDetailAmount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Show Detail Amount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsTaxationTarget__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsTaxationTarget</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ModelType__c</fullName>
        <label>Model Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentDetail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AsiaProjectMasterDetail</label>
        <referenceTo>AsiaProjectMasterDetail__c</referenceTo>
        <relationshipName>AsiaProjectMasterDetail_ParentDetail</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent__c</fullName>
        <label>Project Master</label>
        <referenceTo>AsiaProjectMaster__c</referenceTo>
        <relationshipName>ProjectMaster_AsiaProjectMasterDetail</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PartNumber__c</fullName>
        <label>Part Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuantityUpdatedDate__c</fullName>
        <formula>Datevalue(QuantityUpdatedDatetime__c)</formula>
        <label>Quantity Updated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QuantityUpdatedDatetime__c</fullName>
        <label>Quantity Updated Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>8</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SalesPrice__c</fullName>
        <label>Sales Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SerialNumber__c</fullName>
        <label>Serial Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippingDate__c</fullName>
        <label>Shipping Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SortNo__c</fullName>
        <label>Sort No</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Specification__c</fullName>
        <label>Specification</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier__c</fullName>
        <label>Supplier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>1.明細 
2.見出し 
3.諸経費 
4.小計</description>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UnitPrice__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Project Master Detail</label>
    <nameField>
        <label>AsiaProjectMasterDetail Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>